Added POST and PUT handlers for accounts, updated swagger file
